<resources>
    <string name="web_client_id" translatable="false">510873132832-cbjnduvm1jk12jjt2s5kim35qe8m67sn.apps.googleusercontent.com</string>
    <string name="app_name" translatable="false">BFit Tracker</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_submit">Submit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_no_retry">No, retry</string>
    <string name="action_confirm_sign_out">Yes, sign out</string>
    <string name="setting_up_progress_number_count">%1$d of %2$d</string>
    <string name="title_dob">Date of Birth</string>
    <string name="title_sex">Sex</string>
    <string name="msg_sex_male">Male</string>
    <string name="msg_sex_female">Female</string>
    <string name="msg_prefer_not_to_say">Prefer not to say</string>
    <string name="title_weight">Weight</string>
    <string name="title_height">Height</string>
    <string name="sign_up_title_disabilities">Do you consider yourself to have a disability?</string>
    <string name="title_training_location">Training Location</string>
    <string name="title_select_all_that_apply">(Select all that apply)</string>
    <string name="title_work_out_schedule">Work Out Schedule</string>
    <string name="msg_location_gym">Gym</string>
    <string name="msg_location_home">Home</string>
    <string name="msg_location_park">Park</string>
    <string name="msg_day_monday">Monday</string>
    <string name="msg_day_tuesday">Tuesday</string>
    <string name="msg_day_wednesday">Wednesday</string>
    <string name="msg_day_thursday">Thursday</string>
    <string name="msg_day_friday">Friday</string>
    <string name="msg_day_saturday">Saturday</string>
    <string name="msg_day_sunday">Sunday</string>
    <string name="action_time_start">Start Time</string>
    <string name="action_time_end">End Time</string>
    <string name="error_field_empty">Field cannot be left empty</string>
    <string name="error_option_is_required">One of the options must be selected</string>
    <string name="error_time_greater">Your workout end time seems to be before your start time</string>
    <string name="error_auth_failed">Authentication failed.</string>
    <string name="title_sign_out">Sign out</string>
    <string name="msg_confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="msg_user_already_logged_in">User logged in</string>
    <string name="msg_user_successfully_signed_out">Successfully signed out</string>
    <string name="title_home">Home</string>
    <string name="title_nutriments">Nutriments</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_my_account">My Account</string>
    <string name="title_bmi">BMI</string>
    <string name="title_welcome_dashboard_message">Hope you had a great day, let\'s get working!</string>
    <string name="title_num_hrs_worked_weekly">Number of hours worked (per week)</string>
    <string name="title_num_workouts_completed_weekly">Total workouts completed (per week)</string>
    <string name="title_insights">Insights</string>
    <string name="msg_progress_steps_pattern">%.0f Steps</string>
    <string name="msg_progress_weight_pattern">%.0f kg</string>
    <string name="msg_progress_calorie_pattern">%.0f kcal</string>
    <string name="msg_progress_hydration_pattern">%.0f ml</string>
    <string name="title_step_target">Step Target</string>
    <string name="title_calories_intake">Calories Intake</string>
    <string name="title_calorie_intake">Calorie Intake</string>
    <string name="title_water_intake">Water Intake</string>
    <string name="title_weekly_nutrients_intake">Weekly Nutrients Intake</string>
    <string name="title_weight_target">Weight Target</string>
    <string name="title_calories_target">Calories Target</string>
    <string name="title_water_target">Water Intake Target</string>
    <string name="title_daily_water_intake">Daily Water Intake</string>
    <string name="title_barcode_entry">Is this the correct barcode?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_fat">Fat</string>
    <string name="msg_saturated_fat">Saturated Fat</string>
    <string name="msg_sodium">Sodium</string>
    <string name="msg_protein">Protein</string>
    <string name="msg_carbs">Carbohydrates</string>
    <string name="msg_calories">Calories</string>
    <string name="msg_sugar">Sugar</string>
    <string name="msg_fibre">Fibre</string>
    <string name="title_metric">Metric</string>
    <string name="title_imperial">Imperial</string>
    <string name="title_units_of_measure">Units of Measurement</string>
    <string name="metric_weight">%1$dkg</string>
    <string name="imperial_weight">%1$dlbs</string>
    <string name="weight_text_metric">%1$d kg starting weight</string>
    <string name="weight_text_imperial">%1$d lbs starting weight</string>
    <string name="title_steps">Steps</string>
    <string name="week_steps">%1$d steps last week</string>
    <string name="exercises">Exercises</string>
    <string name="btn_radio_metric">Metric (m/kg)</string>
    <string name="btn_radio_imperial">Imperial (ft/lbs)</string>
    <string name="btn_delete_acc">Delete Account</string>
    <string name="msg_target_with_val">Target: %1$s %2$s</string>

    <!-- Placeholder strings used for dynamic values -->
    <string name="val">%s</string>
    <string name="title_filter_location">Location</string>
    <string name="title_filter_difficulty">Difficulty</string>
    <string name="title_filter_bodygroup">Body Group</string>
    <string name="msg_filter_easy">Easy</string>
    <string name="msg_filter_medium">Medium</string>
    <string name="msg_filter_hard">Hard</string>
    <string name="msg_filter_whole">Whole</string>
    <string name="msg_filter_upper">Upper</string>
    <string name="msg_filter_lower">Lower</string>
    <string name="val_with_unit">%1$s %2$s</string>
    <string name="title_workout_name">Workout Name</string>
    <string name="msg_location_tags">Locations</string>
    <string name="msg_workout_reps">%1$dreps</string>
    <string name="msg__bodygroup_tags">Body</string>
    <string name="msg_difficulty_tags">Difficulty</string>
</resources>