<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/text_view_progress_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/questrial_regular"
        android:text="@string/progress_number"
        android:textColor="#808080"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="25dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/sign_up_title_name_dob"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center">


                <EditText
                    android:id="@+id/edit_text_forename"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_rounded_edit_text"
                    android:drawablePadding="25dp"
                    android:ems="15"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/enter_forename"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#d8d8d8"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center">


                <EditText
                    android:id="@+id/edit_text_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_rounded_edit_text"
                    android:drawablePadding="25dp"
                    android:ems="15"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/enter_surname"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#d8d8d8"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center">


                <EditText
                    android:id="@+id/edit_text_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_rounded_edit_text"
                    android:drawablePadding="25dp"
                    android:ems="15"
                    android:fontFamily="@font/questrial_regular"
                    android:hint="@string/enter_dob"
                    android:focusable="false"
                    android:clickable="false"
                    android:inputType="none"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#d8d8d8"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:onClick="enterDateOfBirth"/>
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|end">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_rounded_primary"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/btn_next"
            android:textAllCaps="true"
            android:textColor="@color/textColorSecondary"
            android:textSize="20sp"
            android:onClick="nextFragment" />
    </LinearLayout>
</RelativeLayout>