...
                    android:text="@string/text_wednesday"
                    android:textAllCaps="true"
                    android:textColor="@drawable/radio_text_selected"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/button_day_saturday"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_rounded_secondary"
...
                    android:textAllCaps="true"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_submit"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
...
