...
                    android:textAllCaps="true"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_next"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
...
